[bverbist] dummy producer

--- a/kafka-producer/pom.xml
+++ b/kafka-producer/pom.xml
@@ -8,4 +8,12 @@
     <artifactId>kafka-producer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.9.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
