--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ allprojects {
 	dependencyManagement {
 		dependencies {
             dependency "org.apache.kafka:kafka-clients:0.9.0.0"
+            dependency "org.slf4j:slf4j-api:1.7.19"
+            dependency "ch.qos.logback:logback-classic:1.1.6"
 			dependency "junit:junit:4.11"
 			dependency "org.assertj:assertj-core:3.3.0"
 			dependency "org.mockito:mockito-all:2.0.2-beta"
