--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ allprojects {
 			dependency "junit:junit:4.11"
 			dependency "org.assertj:assertj-core:3.3.0"
 			dependency "org.mockito:mockito-all:2.0.2-beta"
+			dependency "org.springframework.boot:spring-boot-starter-integration:1.2.3.RELEASE"
+			dependency "org.springframework.boot:spring-boot-starter:1.2.3.RELEASE"
+			dependency "org.springframework.integration:spring-integration-kafka:1.1.1.RELEASE"
+			dependency "org.springframework.integration:spring-integration-java-dsl:1.1.0.M1"
 		}
 	}
 }
