--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ allprojects {
 	dependencyManagement {
 		dependencies {
             dependency "org.apache.kafka:kafka-clients:0.9.0.1"
+			dependency "org.apache.spark:spark-core_2.10:1.6.1"
+			dependency "org.apache.spark:spark-streaming_2.10:1.6.1"
+			dependency "org.apache.spark:spark-streaming-kafka_2.10:1.6.1"
             dependency "org.slf4j:slf4j-api:1.7.19"
             dependency "ch.qos.logback:logback-classic:1.1.6"
 			dependency "junit:junit:4.11"
