--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name='kafka-spark'
-include 'kafka-producer', 'kafka-consumer'
+include 'kafka-producer', 'kafka-consumer', 'spark-consumer'
